# mm-tools-course

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: build-and-run.yml  task-1-IO-flush.yml  task-2-overcommit.yml  task-3-risc-z.yml
01.IO_flush/: Makefile  README.md  io_flush.c  run_experiments.sh  run_experiments_without_make.sh
02.overcommit/: Makefile  README.md  overcommit.c  run_experiments.sh
03.RISC-Z/: CMakeLists.txt  _setup_build_configs.sh  cpu.c  cpu_internal.h  fib.s  test_cpu.c  test_main.c
